# turing-project-4

./: .gitignore  AE.CAP.md  Makefile  OVERVIEW.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
agents/: __init__.py  chatbot.py  llm_tools.py  token_tracking.py  util_deepseek.py  util_memory.py
agents/graph/: viz_graph.ipynb
api/: Dockerfile  README.md  main.py  requirements.txt
app/: Dockerfile  __init__.py  account.py  chart_utils.py  chroma_ui.py  evaluation_ui.py  home.py  login.py  main.py  requirements.txt  sqlite_ui.py
databases/: chroma_config.py  mysql_config.py  sqlite_config.py
docker/: README.md  docker-compose.yml
docs_loader/: ingest.py  processed_files.csv
documentation/diagrams/: api_endpoints.py  authentication_flow.gv  authentication_flow.py  data_flow.py  document_ingestion_pipeline.py  langgraph_workflow.gv  langgraph_workflow.py  memory_management.gv  memory_management.py  system_architecture.py  token_tracking.gv  token_tracking.py  tool_selection_flow.py
logs/: config.py
tests/evaluation/: db_utils.py  evaluate.py
utils/runware/: README.md  simple_test.py
web/: Dockerfile  app.py
web/www/: index.html
web/www/css/: style.css
web/www/images/: generation_summary.json
web/www/images/protected/: README.md  holiday-sales-event-metadata.json
web/www/images/public/: README.md  clearance-sale-metadata.json
web/www/js/: script.js
